--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,3 +2,20 @@ version: "3.8"
 
 services:
   web-api:
+    build: ./web-api
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
+
+  db:
+    build: ./db
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+
+volumes:
+  db-data:
